docs(openapi): fix spec (#91)
